--- a/wiki/fr/TechDraw_SurfaceFinishSymbols.html
+++ b/wiki/fr/TechDraw_SurfaceFinishSymbols.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw SurfaceFinishSymbols/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+SurfaceFinishSymbols&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_SurfaceFinishSymbols.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Oberfl&auml;chensymbole (80% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_SurfaceFinishSymbols.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Oberfl&auml;chensymbole (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_SurfaceFinishSymbols.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw SurfaceFinishSymbols (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_SurfaceFinishSymbols.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Simboli di finitura superficiale (80% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_SurfaceFinishSymbols.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Dodaj symbol wyko&#324;czenia powierzchni (80% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_SurfaceFinishSymbols.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj symbol wyko&#324;czenia powierzchni (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_SurfaceFinishSymbols.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw SurfaceFinishSymbols
 (&#1063;&#1077;&#1088;&#1090;&#1105;&#1078; &#1057;&#1080;&#1084;&#1074;&#1086;&#1083; &#1054;&#1073;&#1088;&#1072;&#1073;&#1086;&#1090;&#1082;&#1080; &#1055;&#1086;&#1074;&#1077;&#1088;&#1093;&#1085;&#1086;&#1089;&#1090;&#1080;) (10% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_SurfaceFinishSymbols.html" class="mw-pt-progress mw-pt-progress--high" title="&#44592;&#49696;&#46020;&#47732; &#54364;&#47732;&#47560;&#44048; &#44592;&#54840; (80% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -14,7 +14,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -25,7 +24,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Symboles &rarr; Ins&eacute;rer un symbole de finition de surface
+<td class="ctEven">TechDraw &rarr; Symboles &rarr; Symbole de finition de surface
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -54,7 +53,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Symbole de finition de surface</b> ajoute un symbole de finition de surface &agrave; une feuille.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_SurfaceFinishSymbolExample1.png&amp;filetimestamp=20240922171717&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SurfaceFinishSymbolExample1.png" decoding="async" width="330" height="218" class="mw-file-element" data-file-width="588" data-file-height="388"></a></span>
@@ -102,7 +100,7 @@
 <hr>
 <ul><li><b>Extensions&nbsp;:</b>
 <ul><li><b>Attributs et modifications&nbsp;:</b> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">Choix des attributs</a>, <a href="../fr/TechDraw_ExtensionChangeLineAttributes.html" title="TechDraw ExtensionChangeLineAttributes/fr">Modification des attributs</a>, <a href="../fr/TechDraw_ExtensionExtendLine.html" title="TechDraw ExtensionExtendLine/fr">Prolonger</a>, <a href="../fr/TechDraw_ExtensionShortenLine.html" title="TechDraw ExtensionShortenLine/fr">Raccourcir</a>, <a href="../fr/TechDraw_ExtensionLockUnlockView.html" title="TechDraw ExtensionLockUnlockView/fr">Verrouiller/d&eacute;verrouiller</a>, <a href="../fr/TechDraw_ExtensionPositionSectionView.html" title="TechDraw ExtensionPositionSectionView/fr">Positionner une vue en coupe</a>, Aligner (<a href="../fr/TechDraw_ExtensionPosHorizChainDimension.html" title="TechDraw ExtensionPosHorizChainDimension/fr">horizontalement</a> -  <a href="../fr/TechDraw_ExtensionPosVertChainDimension.html" title="TechDraw ExtensionPosVertChainDimension/fr">verticalement</a> - <a href="../fr/TechDraw_ExtensionPosObliqueChainDimension.html" title="TechDraw ExtensionPosObliqueChainDimension/fr">obliquemement</a>), Cascade (<a href="../fr/TechDraw_ExtensionCascadeHorizDimension.html" title="TechDraw ExtensionCascadeHorizDimension/fr">horizontale</a> - <a href="../fr/TechDraw_ExtensionCascadeVertDimension.html" title="TechDraw ExtensionCascadeVertDimension/fr">verticale</a> - <a href="../fr/TechDraw_ExtensionCascadeObliqueDimension.html" title="TechDraw ExtensionCascadeObliqueDimension/fr">inclin&eacute;e</a>), <a href="../fr/TechDraw_ExtensionAreaAnnotation.html" title="TechDraw ExtensionAreaAnnotation/fr">Calculer l'aire des faces s&eacute;lectionn&eacute;es</a>, <a href="../fr/TechDraw_ExtensionArcLengthAnnotation.html" title="TechDraw ExtensionArcLengthAnnotation/fr">Longueur d'arc d'ar&ecirc;tes s&eacute;lectionn&eacute;es</a>,  <a href="../fr/TechDraw_ExtensionCustomizeFormat.html" title="TechDraw ExtensionCustomizeFormat/fr">Personnaliser le format d'infobulle</a></li>
-<li><b>Lignes centrales, filetage et taraudage&nbsp;:</b> Axes (<a href="../fr/TechDraw_ExtensionCircleCenterLines.html" title="TechDraw ExtensionCircleCenterLines/fr">de centrage</a> - <a href="../fr/TechDraw_ExtensionHoleCircle.html" title="TechDraw ExtensionHoleCircle/fr">de centrage de trous/vis</a>),  <a href="../fr/TechDraw_ExtensionThreadHoleSide.html" title="TechDraw ExtensionThreadHoleSide/fr">Corps de taraudage</a>,  <a href="../fr/TechDraw_ExtensionThreadHoleBottom.html" title="TechDraw ExtensionThreadHoleBottom/fr">Taraudage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltSide.html" title="TechDraw ExtensionThreadBoltSide/fr">Corps de filetage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom/fr">Filetage</a>, <a href="../fr/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/fr">Intersection de lignes</a>, <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Ajouter un sommet d&eacute;cal&eacute;</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle</a>, <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle par 3 points</a>, Ligne ( <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">parall&egrave;le</a> - <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">perpendiculaire</a>)</li>
+<li><b>Lignes centrales, filetage et taraudage&nbsp;:</b> Axes (<a href="../fr/TechDraw_ExtensionCircleCenterLines.html" title="TechDraw ExtensionCircleCenterLines/fr">de centrage</a> - <a href="../fr/TechDraw_ExtensionHoleCircle.html" title="TechDraw ExtensionHoleCircle/fr">de centrage de trous/vis</a>),  <a href="../fr/TechDraw_ExtensionThreadHoleSide.html" title="TechDraw ExtensionThreadHoleSide/fr">Corps de taraudage</a>,  <a href="../fr/TechDraw_ExtensionThreadHoleBottom.html" title="TechDraw ExtensionThreadHoleBottom/fr">Taraudage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltSide.html" title="TechDraw ExtensionThreadBoltSide/fr">Corps de filetage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom/fr">Filetage</a>, <a href="../fr/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/fr">Intersections cosm&eacute;tiques de lignes</a>, <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Ajouter un sommet d&eacute;cal&eacute;</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle</a>, <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle par 3 points</a>, Ligne ( <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">parall&egrave;le</a> - <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">perpendiculaire</a>)</li>
 <li><b>Cotes&nbsp;:</b> <a href="../fr/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/fr">Diam&egrave;tre '&#8960;'</a>, <a href="../fr/TechDraw_ExtensionInsertSquare.html" title="TechDraw ExtensionInsertSquare/fr">Section tube '&#12348;'</a>, <a href="../fr/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/fr">Ins&eacute;rer le pr&eacute;fixe "n&times;"</a>,  <a href="../fr/TechDraw_ExtensionRemovePrefixChar.html" title="TechDraw ExtensionRemovePrefixChar/fr">Supprimer les symboles</a>, D&eacute;cimales (<a href="../fr/TechDraw_ExtensionIncreaseDecimal.html" title="TechDraw ExtensionIncreaseDecimal/fr">en plus</a> - <a href="../fr/TechDraw_ExtensionDecreaseDecimal.html" title="TechDraw ExtensionDecreaseDecimal/fr">en moins</a>)</li></ul></li></ul>
 <hr>
 <ul><li><b>Divers&nbsp;:</b> <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">Supprimer l'objet cosm&eacute;tique</a></li></ul>
@@ -125,34 +123,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260110202020
+Cached time: 20260124114652
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.211 seconds
-Preprocessor visited node count: 371/1000000
-Post&#8208;expand include size: 26523/2097152 bytes
-Template argument size: 9949/2097152 bytes
+CPU time usage: 0.075 seconds
+Real time usage: 0.117 seconds
+Preprocessor visited node count: 370/1000000
+Post&#8208;expand include size: 26527/2097152 bytes
+Template argument size: 9939/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1761/5000000 bytes
+Unstrip post&#8208;expand size: 1771/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   67.122      1 -total
- 25.96%   17.422      1 Template:TechDraw_Tools_navi/fr
- 16.92%   11.359      1 Template:GuiCommand/fr
- 15.68%   10.526      2 Template:Button
- 14.59%    9.791      1 Template:Userdocnavi/fr
- 12.61%    8.466      2 Template:Navigation_menu_2
- 11.47%    7.696      2 Template:Docnav/fr
- 10.29%    6.909      2 Template:Caption
-  2.18%    1.460      4 Template:MenuCommand
+100.00%   21.700      1 -total
+ 27.79%    6.031      1 Template:TechDraw_Tools_navi/fr
+ 19.62%    4.257      2 Template:Navigation_menu_2
+ 15.79%    3.426      2 Template:Caption
+ 14.10%    3.059      2 Template:Docnav/fr
+ 12.43%    2.697      1 Template:GuiCommand/fr
+ 11.79%    2.559      1 Template:Userdocnavi/fr
+  7.82%    1.696      2 Template:Button
+  7.01%    1.520      4 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:293603-0!canonical and timestamp 20260110202020 and revision id 1732007. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:293603-0!canonical and timestamp 20260124114652 and revision id 1743348. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
