--- a/wiki/fr/TechDraw_SurfaceFinishSymbols.html
+++ b/wiki/fr/TechDraw_SurfaceFinishSymbols.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw SurfaceFinishSymbols/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+SurfaceFinishSymbols&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_SurfaceFinishSymbols.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Oberfl&auml;chensymbole (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_SurfaceFinishSymbols.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw SurfaceFinishSymbols (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_SurfaceFinishSymbols.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Simboli di finitura superficiale (80% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_SurfaceFinishSymbols.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj symbol wyko&#324;czenia powierzchni (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_SurfaceFinishSymbols.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw SurfaceFinishSymbols
@@ -64,18 +64,16 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez une vue existante.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_SurfaceFinishSymbols.svg&amp;filetimestamp=20240710144421&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SurfaceFinishSymbols.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer un symbole de finition de surface</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Symboles &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_SurfaceFinishSymbols.svg&amp;filetimestamp=20240710144421&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SurfaceFinishSymbols.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer un symbole de finition de surface</b> du menu.</li></ul></li>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_SurfaceFinishSymbols.svg&amp;filetimestamp=20240710144421&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SurfaceFinishSymbols.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Symbole de finition de surface</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Symboles &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_SurfaceFinishSymbols.svg&amp;filetimestamp=20240710144421&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SurfaceFinishSymbols.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Symbole de finition de surface</b> du menu.</li></ul></li>
 <li>Un panneau des t&acirc;ches s'ouvre.</li>
 <li>Sp&eacute;cifiez le symbole requis en cliquant sur l'un des 6 boutons de symbole.</li>
 <li>Vous pouvez modifier <b>Angle du symbole</b>.</li>
 <li>S&eacute;lectionnez le style <b>ISO</b> ou <b>ASME</b>.</li>
 <li>S&eacute;lectionnez et/ou entrez les attributs requis.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -123,34 +121,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124114652
+Cached time: 20260124114801
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.117 seconds
-Preprocessor visited node count: 370/1000000
-Post&#8208;expand include size: 26527/2097152 bytes
-Template argument size: 9939/2097152 bytes
+CPU time usage: 0.092 seconds
+Real time usage: 0.129 seconds
+Preprocessor visited node count: 369/1000000
+Post&#8208;expand include size: 26503/2097152 bytes
+Template argument size: 9915/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1771/5000000 bytes
+Unstrip post&#8208;expand size: 1775/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.700      1 -total
- 27.79%    6.031      1 Template:TechDraw_Tools_navi/fr
- 19.62%    4.257      2 Template:Navigation_menu_2
- 15.79%    3.426      2 Template:Caption
- 14.10%    3.059      2 Template:Docnav/fr
- 12.43%    2.697      1 Template:GuiCommand/fr
- 11.79%    2.559      1 Template:Userdocnavi/fr
-  7.82%    1.696      2 Template:Button
-  7.01%    1.520      4 Template:MenuCommand
+100.00%   25.341      1 -total
+ 30.89%    7.827      1 Template:TechDraw_Tools_navi/fr
+ 23.39%    5.927      2 Template:Navigation_menu_2
+ 15.81%    4.007      1 Template:Userdocnavi/fr
+ 14.34%    3.635      1 Template:GuiCommand/fr
+ 10.77%    2.730      2 Template:Docnav/fr
+  8.63%    2.187      4 Template:MenuCommand
+  7.74%    1.962      2 Template:Button
+  7.60%    1.925      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:293603-0!canonical and timestamp 20260124114652 and revision id 1743348. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:293603-0!canonical and timestamp 20260124114801 and revision id 1743350. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
